objects/nameless__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>namelesses</relationshipLabel>
        <relationshipName>namelesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handler__c</fullName>
        <label>Handler</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Delta__c</fullName>
        <label>Source_Delta</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>nameless</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Handler__c</columns>
        <columns>Account__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Nameless-{0000}</displayFormat>
        <label>nameless Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>namelesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>